feat(cli): add noex-server CLI entry point
Add `noex-server` command that bootstraps store, rules engine, and
WebSocket server from CLI flags or a JSON config file. Includes
persistence adapter selection (memory/file/sqlite), built-in auth,
graceful shutdown, and a startup banner.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
       "import": "./dist/index.js"
     }
   },
+  "bin": {
+    "noex-server": "./dist/bin/noex-server.js"
+  },
   "files": [
     "dist"
   ],
