--- a/package.json
+++ b/package.json
@@ -38,10 +38,14 @@
   "peerDependencies": {
     "@hamicek/noex": "^0.1.0",
     "@hamicek/noex-store": "^0.1.0",
-    "@hamicek/noex-rules": "^0.1.0"
+    "@hamicek/noex-rules": "^0.1.0",
+    "better-sqlite3": "^11.0.0 || ^12.0.0"
   },
   "peerDependenciesMeta": {
     "@hamicek/noex-rules": {
+      "optional": true
+    },
+    "better-sqlite3": {
       "optional": true
     }
   },
@@ -51,6 +55,7 @@
     "@hamicek/noex-rules": "^0.1.0",
     "@types/node": "^22.0.0",
     "@types/ws": "^8.5.0",
+    "better-sqlite3": "^12.5.0",
     "changelogen": "^0.6.2",
     "typescript": "^5.7.0",
     "vitest": "^2.1.0"
